--- a/figma-home.css
+++ b/figma-home.css
@@ -108,7 +108,7 @@ ul a {
     font-weight: 520;
     /* Interpolated weight */
     text-decoration: none;
-    color: rgb(26, 9, 63);
+    color: red;
 
 }
 
