--- a/home2.css
+++ b/home2.css
@@ -116,7 +116,7 @@ ul a {
     font-weight: 520;
     /* Interpolated weight */
     text-decoration: none;
-    color: rgb(26, 9, 63);
+    color: red;
 
 }
 
